# rayzor

./: .gitignore  Cargo.toml  run_haxe_tests.sh  test_results.txt  triangle.ppm
compiler/: Cargo.toml
compiler/benches/: macro_bench.rs
compiler/benchmarks/haxe/: BMDeltaBlueCode.hx  BMFibonacciCode.hx
compiler/benchmarks/precompiled/: deltablue.rzb  fibonacci.rzb  mandelbrot.rzb  nbody.rzb
compiler/benchmarks/src/: deltablue.hx  fibonacci.hx
compiler/data/: rayzor_compress_runtime.js  rayzor_net_runtime.js  rayzor_tensor_runtime.js  rayzor_threads.js  rayzor_worker.js  wasi_snapshot_preview1.command.wasm
compiler/examples/: benchmark_bundle.rs  benchmark_runner.rs  debug_array_iterator.rs  test_array_iterator_e2e.rs  test_bundle_loading.rs  test_core_types_e2e.rs  test_cranelift_memory_model.rs  test_full_pipeline_tiered.rs  test_generic_metadata.rs  test_haxe_concurrent_compilation.rs  test_haxe_runtime.rs  test_hir_simple.rs  test_interpreter_e2e.rs  test_mir_interpreter.rs  test_ptr_debug.rs  test_rayzor_stdlib_e2e.rs  test_send_sync_e2e.rs  test_stringtools.hx  test_stringtools.rs  test_sys_thread.rs  test_tiered_jit_fibonacci.rs  test_tiered_with_loop.rs  test_typeflowguard_comprehensive.rs
compiler/haxe-std/: StringTools.hx  Sys.hx
compiler/haxe-std/haxe/: Exception.hx  Json.hx  NativeStackTrace.hx  Utf8.hx
compiler/haxe-std/rayzor/: Box.hx  Ptr.hx  Ref.hx  Usize.hx
compiler/haxe-std/sys/: Http.hx
compiler/src/: compilation.rs  dependency_graph.rs  error_codes.rs  pipeline.rs
compiler/src/codegen/: aot_compiler.rs  apple_jit_memory.rs  c_backend.rs  cranelift_backend.rs  instruction_lowering.rs  llvm_aot_backend.rs  llvm_jit_backend.rs  mir_interpreter.rs  mod.rs  profiling.rs  tiered_backend.rs  wasm_backend.rs  wasm_bindgen.rs  wasm_component.rs  wasm_linker.rs  wasm_runner.rs  wasm_wit.rs  wgsl_transpiler.rs
compiler/src/ir/: blade.rs  blocks.rs  bounds_check_elimination.rs  builder.rs  bytecode.rs  devirtualize.rs  drop_analysis.rs  dump.rs  escape_analysis.rs  functions.rs  hir.rs  hir_to_mir.rs  inlining.rs  insert_free.rs  instructions.rs  loop_analysis.rs  loop_unrolling.rs  lowering.rs  mir_builder.rs  mod.rs  modules.rs  monomorphize.rs  optimizable.rs  optimization.rs  scalar_replacement.rs  tast_to_hir.rs  tree_shake.rs  types.rs  validation.rs  vectorization.rs
compiler/src/macro_system/: ast_bridge.rs  build_macros.rs  class_registry.rs  context_api.rs  environment.rs  expander.rs  interpreter.rs  mod.rs  registry.rs  reification.rs  value.rs
compiler/src/rpkg/: install.rs  mod.rs  pack.rs  registry.rs
compiler/src/semantic_graph/: builder.rs  call_graph.rs  cfg.rs  dfg.rs  dfg_builder.rs  dominance.rs  free_variables.rs  mod.rs  ownership_graph.rs  phi_type.rs  source_location_tracking.rs  tast_cfg_mapping.rs  validation.rs
compiler/src/stdlib/: array.rs  channel.rs  compress.rs  ereg.rs  future.rs  mod.rs  runtime_mapping.rs  socket.rs  ssl.rs  sync.rs  systems.rs  thread.rs  vec_u8.rs
compiler/src/tast/: ast_lowering.rs  capture_analyzer.rs  class_builder.rs  constraint_solver.rs  control_flow_analysis.rs  core.rs  core_types.rs  effect_analysis.rs  fix_generic_instantiation.rs  generic_instantiation.rs  generics.rs  id_types.rs  namespace.rs  node.rs  null_safety_analysis.rs  package_access.rs  scopes.rs  send_sync_validator.rs  stdlib_loader.rs  symbol_cache.rs  symbols.rs  trait_checker.rs  type_cache.rs  type_checker.rs  type_checking_pipeline.rs  type_diagnostics.rs  type_flow_guard.rs  type_inference.rs  type_resolution.rs
compiler/src/tools/: aot_build.rs  preblade.rs
compiler/src/workspace/: init.rs  manifest.rs  mod.rs
compiler/tests/: parser_stdlib_compat_tests.rs  test_macro_e2e.rs  test_macro_system.rs
compiler/tests/gpu/: test_gpu_activations.hx  test_gpu_basic.hx  test_gpu_fusion.hx  test_gpu_matmul.hx  test_gpu_struct.hx
compiler/tests/haxe/: DebugChecksum.hx  debug_array_index.hx  debug_array_ops.hx  debug_array_set.hx  debug_bitshift.hx  debug_channel.hx  debug_checksum.hx  debug_division.hx  debug_palette.hx  debug_static_div.hx  debug_static_inline.hx  debug_untyped_static.hx  debug_while.hx  mandelbrot_small.hx  test_abstract_static.hx  test_array_comprehension_scope.hx  test_array_iterator.hx  test_async_await.hx  test_bind.hx  test_bitshift.hx  test_compress.hx  test_conditional.hx  test_copy.hx  test_copy_clone_identity.hx  test_create_enum.hx  test_debug_circular.hx  test_derive_clone.hx  test_derive_debug.hx  test_derive_debug_format.hx  test_derive_debug_nested.hx  test_derive_default.hx  test_derive_default_custom.hx  test_derive_default_nested.hx  test_derive_string_fields.hx  test_derive_traits.hx  test_drop.hx  test_dynamic_arith.hx  test_dynamic_class.hx  test_dynamic_methods.hx  test_enum_abstract.hx  (+51 more)
gpu/: Cargo.toml  Dockerfile.cuda-test  build-wasm-host.sh  pack-rpkg.sh
gpu/pkg/: rayzor_gpu.d.ts  rayzor_gpu.js  rayzor_gpu_bg.wasm  rayzor_gpu_bg.wasm.d.ts
gpu/src/: backend.rs  buffer.rs  kernel_cache.rs  kernel_ir.rs  lazy.rs  lib.rs  ops.rs  wasm_exports.rs
gpu/src/codegen/: cuda.rs  cuda_fused.rs  cuda_matmul.rs  cuda_reduction.rs  mod.rs  msl.rs  msl_fused.rs  (+4 more)
gpu/tests/: cuda_tcc_test.rs  graphics_triangle_test.rs  render_and_export_test.rs
gpu/wasm/: gpu_host.js
lsp/: Cargo.toml
lsp/src/: analysis.rs  context.rs  diagnostics.rs  lib.rs  server.rs
runtime/: Cargo.toml
runtime-wasm/: Cargo.toml  build.sh
runtime-wasm/.cargo/: config.toml
runtime-wasm/src/: lib.rs
runtime/src/: anon_object.rs  arena.rs  array_iterator.rs  compress.rs  concurrency.rs  cstring_runtime.rs  ereg.rs  exception.rs  future.rs  haxe_array.rs  haxe_string.rs  haxe_sys.rs  json.rs  lib.rs  native_stack_trace.rs  panic_guard.rs  plugin_impl.rs  reflect.rs  socket.rs  ssl.rs  string.rs  tinycc_runtime.rs  type_system.rs
window/: Cargo.toml  build.rs  pack-rpkg.sh
window/pkg/: rayzor_window.d.ts  rayzor_window.js  rayzor_window_bg.wasm  rayzor_window_bg.wasm.d.ts
window/src/: cocoa.rs  event.rs  lib.rs  wasm_exports.rs  web.rs  win32.rs  x11.rs
window/wasm/: window_host.js
(+150 files in other folders)
