[workspace]
members = [
    "parser",
    "compiler",
    "diagnostics",
    "source_map",
    "runtime",
    "gpu"
]
exclude = [
    "cranelift-fork",
    "ci/macro-e2e"
]

[package]
name = "rayzor"
version = "0.1.0"
edition = "2021"

[features]
llvm-backend = ["compiler/llvm-backend"]
metal-gpu = ["gpu/metal-backend"]
webgpu = ["gpu/webgpu-backend"]

[dependencies]
parser = { path = "parser" }
compiler = { path = "compiler" }
rayzor-plugin = { path = "plugin" }
rayzor-runtime = { path = "runtime" }
gpu = { path = "gpu", package = "rayzor-gpu", optional = true }
clap = { version = "4.5", features = ["derive"] }
libloading = "0.8"

# Workaround for LLVM optimizer bug that causes infinite loops in release builds
# when lowering TAST expressions. Using opt-level=2 instead of 3 prevents the bug.
[profile.release.package.compiler]
opt-level = 2
