[workspace]
members = [
    "parser",
    "compiler",
    "diagnostics",
    "source_map",
    "runtime",
    "gpu",
    "window",
    "lsp"
]
exclude = [
    "cranelift-fork",
    "ci/macro-e2e"
]

[package]
name = "rayzor"
version = "0.1.0"
edition = "2021"

[features]
llvm-backend = ["compiler/llvm-backend"]

[dependencies]
parser = { path = "parser" }
compiler = { path = "compiler" }
diagnostics = { path = "diagnostics" }
rayzor-runtime = { path = "runtime" }
clap = { version = "4.5", features = ["derive"] }
libloading = "0.8"
ratatui = "0.29"
crossterm = "0.28"
postcard = { version = "1.0", features = ["alloc"] }
rayzor-lsp = { path = "lsp" }

# Workaround for LLVM optimizer bug that causes infinite loops in release builds
# when lowering TAST expressions. Using opt-level=2 instead of 3 prevents the bug.
[profile.release.package.compiler]
opt-level = 2
