[package]
name = "compiler"
version = "0.1.0"
edition = "2021"
description = "Rayzor Haxe Language Compiler"

[dependencies]
parser = { path = "../parser" }
source_map = { path = "../source_map" }
diagnostics = { path = "../diagnostics" }
rayzor-runtime = { path = "../runtime", features = ["tcc-runtime"] }
rayzor-plugin = { path = "../plugin" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libloading = "0.8"  # For HDLL dynamic library loading
libc = "0.2"  # For dlopen flags on Linux
postcard = { version = "1.0", features = ["alloc"] }
memmap2 = "0.9"
fxhash = "0.2.1"
smallvec = "1.13"  # Stack-allocated Vec for small collections (FFI args)
log = "0.4"
env_logger = "0.11"
indexmap = "2"
tracing = '0.1.44'
rayon = "1.10"  # Parallel iteration for background JIT compilation
chrono = "0.4"  # Date/time for benchmark results
zstd = "0.13"  # Bundle compression
toml = "0.8"   # Workspace manifest parsing

# Cranelift JIT compilation - fork with ARM64 PLT fixes + MAP_JIT for 100% stability
cranelift = { git = "https://github.com/darmie/wasmtime", branch = "fix-plt-aarch64", package = "cranelift", features = ["jit", "module", "native"] }
cranelift-module = { git = "https://github.com/darmie/wasmtime", branch = "fix-plt-aarch64", package = "cranelift-module" }
cranelift-jit = { git = "https://github.com/darmie/wasmtime", branch = "fix-plt-aarch64", package = "cranelift-jit" }
cranelift-codegen = { git = "https://github.com/darmie/wasmtime", branch = "fix-plt-aarch64", package = "cranelift-codegen" }
cranelift-frontend = { git = "https://github.com/darmie/wasmtime", branch = "fix-plt-aarch64", package = "cranelift-frontend" }
cranelift-native = { git = "https://github.com/darmie/wasmtime", branch = "fix-plt-aarch64", package = "cranelift-native" }
target-lexicon = "0.12"

# WASM backend — direct MIR → WebAssembly via wasm-encoder
wasm-encoder = "0.245"
wasmparser = "0.245"  # WASM linker — parse runtime .wasm for merging
wit-component = "0.245"  # WASI P2 Component wrapping (core module → component)

# WASM runtime — embedded wasmtime for `rayzor run --wasm`
wasmtime = { git = "https://github.com/darmie/wasmtime", branch = "fix-plt-aarch64", package = "wasmtime", optional = true }
wasi-common = { git = "https://github.com/darmie/wasmtime", branch = "fix-plt-aarch64", package = "wasmtime-wasi", optional = true }

# wgpu-backed Tensor compute for `rayzor run --wasm` (native compute via Metal/Vulkan/DX12)
rayzor-gpu = { path = "../gpu", default-features = false, features = ["webgpu-backend"], optional = true }
pollster = { version = "0.4", optional = true }
wgpu = { version = "24", optional = true }

# LLVM backend (optional, for Tier 3 optimization and AOT)
inkwell = { version = "0.5", features = ["llvm18-0"], optional = true}
llvm-sys = { version = "180", optional = true }
regex = "1.12.3"


[build-dependencies]
cc = "1"

[dev-dependencies]
walkdir = "2"
criterion = { version = "0.5", features = ["html_reports"] }
clap = { version = "4.5", features = ["derive"] }

[[bench]]
name = "type_system_bench"
harness = false

[[bench]]
name = "macro_bench"
harness = false

[features]
default = ["cranelift-backend", "wasm-runtime"]
cranelift-backend = []
llvm-backend = ["inkwell", "llvm-sys"]
wasm-runtime = ["wasmtime", "wasi-common", "rayzor-gpu", "pollster", "wgpu"]
all-backends = ["cranelift-backend", "llvm-backend"]

[[bin]]
name = "rayzor-build"
path = "src/bin/rayzor_build.rs"
required-features = ["llvm-backend"]

[[bin]]
name = "validate_pipeline"
path = "src/bin/validate_pipeline.rs"

[[bin]]
name = "simple_test"
path = "src/bin/simple_test.rs"

[[bin]]
name = "test_undefined"
path = "src/bin/test_undefined.rs"

[[example]]
name = "test_integration_gaps"
path = "examples/test_integration_gaps.rs"

[[example]]
name = "test_null_safety"
path = "examples/test_null_safety.rs"

[[example]]
name = "test_core_types_e2e"
path = "examples/test_core_types_e2e.rs"

[[example]]
name = "test_std_string_simple"
path = "examples/test_std_string_simple.rs"

[[example]]
name = "test_dynamic_boxing"
path = "examples/test_dynamic_boxing.rs"

[[example]]
name = "test_class_boxing"
path = "examples/test_class_boxing.rs"

[[example]]
name = "test_dynamic_field_access"
path = "examples/test_dynamic_field_access.rs"

[[example]]
name = "benchmark_runner"
path = "examples/benchmark_runner.rs"

[[example]]
name = "benchmark_bundle"
path = "examples/benchmark_bundle.rs"
