[package]
name = "rayzor-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
compiler = { path = "../compiler" }
parser = { path = "../parser" }
diagnostics = { path = "../diagnostics" }
source_map = { path = "../source_map" }
lsp-server = "0.7"
lsp-types = "0.97"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
