[package]
name = "rayzor-runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
inventory = "0.3"
rayzor-plugin = { path = "../plugin" }
lazy_static = "1.4"
libc = "0.2"
chrono = "0.4"
log = "0.4"
parking_lot = "0.12"
regex = "1"
backtrace = "0.3"

[build-dependencies]
cc = { version = "1", optional = true }

[features]
default = []
runtime-safety-checks = []
panic-on-safety-violation = []
tcc-runtime = ["cc"]

[profile.release]
opt-level = 3
lto = true
